samples/_failures_safe/1761130430_d7cf79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f969c11.c: In function ‘main’:
./samples/SAFE/__tmp_2f969c11.c:196:5: error: expected declaration or statement at end of input
  196 |     for (size_t i = 0; i < token_count && tokens[i].type != TOKEN_END; i++) {
      |     ^~~
./samples/SAFE/__tmp_2f969c11.c:196:5: error: expected declaration or statement at end of input
